--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -177,7 +177,7 @@ img.left, figure.left {float: left; margin: 0 2em 2em 0;}
 	
 	/* Main Nav */
 	#banner nav {
-		background: #000305;
+		background: #366D9B;
 		font-size: 1.143em;
 		height: 40px;
 		line-height: 30px;
